<resources>
    <string name="app_name">Rouman</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Settings layout-->
    <string name="Relay1">R1</string>
    <string name="Relay2">R2</string>
    <string name="Relay3">R3</string>
    <string name="Relay4">R4</string>

    <string name="Relay5">R5</string>
    <string name="Relay6">R6</string>
    <string name="Relay7">R7</string>
    <string name="Relay8">R8</string>

    <!-- Connected devices-->
    <string name="NotAssigned">No device</string>

    <!-- List layout -->
    <string name="Clear_program">Clear Program</string>
</resources>
